--- a/src/styles.css
+++ b/src/styles.css
@@ -103,6 +103,8 @@
 .column .tags {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+
     background-color: tomato;
 }
 .column .tags * {
@@ -111,7 +113,6 @@
 
     background-color: white;
 }
-
 
 .overlay {
     display: flex;
@@ -151,9 +152,24 @@
     }
 }
 
-.test {
-    width: 100px;
-    height: 100px;
+.output-top {
+    height: 90%;
+}
+.output .tags-display {
+    width: 100%;
 
-    background-color: red;
+    margin-top: 10px;
+    
+    height: 8%;
+}
+.output .tags-display * {
+    width: 100%;
+    height: 100%;
+    
+    padding: 0 5px;
+    
+    font-size: 1rem;
+}
+.output input:focus {
+    outline: none;
 }
